<resources>
    <string name="app_name">OpenXiaomiScale</string>
    <string name="scaleSearchingString">(Searching...)</string>
    <string name="scaleSearchingStatusString">If not found, step up.</string>
    <string name="locationPermissionRequiredString">Permission required</string>
    <string name="locationPermissionRequiredMessageString">Starting from Android M, location permission is required to access BLE scan data from background.</string>
    <string name="scaleDisconnectedString">(Disconnected)</string>
    <string name="stringDisconnectedStatusString">Disconnected due to range, idle, etc.</string>
    <string name="measurementUnitCattyString">jin</string>
    <string name="measurementUnitLbsString">lbs</string>
    <string name="measurementUnitKgString">kg</string>
    <string name="stabilizedString">Stabilized</string>
    <string name="weightRemovedString">Weight removed</string>
    <string name="scaleNotFoundString">(Scale not found)</string>
    <string name="scaleNotFoundStatusString">Could not find scale. Check scale battery and reception, and launch again</string>
    <string name="scaleFoundStatusString">Scale found, go ahead.</string>
    <string name="scanStartButtonString">Scan start</string>
    <string name="scaleNameLableString">Scale: </string>
    <string name="measurementUnitPlaceholderString">(Unit)</string>
    <string name="settingTitleString">Settings</string>
    <string name="bmiMasterSummaryString">Calculates BMI data based on your personal information below</string>
    <string name="bmiMasterTitleString">BMI</string>
    <string name="imperialUnitTitleString">Imperial Unit</string>
    <string name="imperialUnitSummaryString">Centimeter or feet unit for height data</string>
    <string name="heightTitleString">Height</string>
    <string name="heightSummaryString">Actual height data (Centimeter or feet unit)</string>
    <string name="personalInformationCategoryTitleString">Personal Information</string>
    <string name="advancedCategoryTitleString">Advanced Option (Normally, you don\'t have to change this)</string>
    <string name="maximumScanDurationTitleString">Maximum scan duration</string>
    <string name="maximumScanDurationSummaryString">Configures maximum scan duration.\nHigher the number, longer it will try to search scale.\n(Default: 10000 miliseconds)</string>
    <string name="informationCategoryTitleString">Information</string>
    <string name="licenseTitleString">License</string>
    <string name="licenseSummaryString" translatable="false">Apache License 2.0</string>
    <string name="bugReportTitleString">Bug report and source code</string>
    <string name="bugReportSummaryString">Press here to launch web browser</string>
    <string name="shareButtonString">Share</string>
    <string name="bmiUnderweightString">Underweight</string>
    <string name="bmiNormalweightString">Normal weight</string>
    <string name="bmiOverweightString">Overweight</string>
    <string name="bmiObeseString">Obese</string>
    <string name="bmiExtremelyobeseString">Extremely Obese</string>
    <string name="historyMenuString">History</string>

</resources>
