<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <SwitchPreference
        android:defaultValue="false"
        android:key="settingsBMICalculation"
        android:summary="@string/bmiMasterSummaryString"
        android:title="@string/bmiMasterTitleString"/>

    <PreferenceCategory
        android:title="@string/personalInformationCategoryTitleString"
        android:dependency="settingsBMICalculation">

        <SwitchPreference
            android:key="settingsBMIImperial"
            android:title="@string/imperialUnitTitleString"
            android:defaultValue="false"
            android:summary="@string/imperialUnitSummaryString"
            android:dependency="settingsBMICalculation"/>

        <EditTextPreference
            android:key="settingsHeight"
            android:defaultValue="100.0"
            android:inputType="numberDecimal"
            android:summary="@string/heightSummaryString"
            android:title="@string/heightTitleString"
            android:dependency="settingsBMICalculation" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/advancedCategoryTitleString">

        <EditTextPreference
            android:defaultValue="10000"
            android:key="settingsScanMaxDuration"
            android:title="@string/maximumScanDurationTitleString"
            android:summary="@string/maximumScanDurationSummaryString"
            android:inputType="number" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/informationCategoryTitleString">

        <Preference
            android:title="@string/licenseTitleString"
            android:summary="@string/licenseSummaryString" />

        <Preference
            android:title="@string/bugReportTitleString"
            android:summary="@string/bugReportSummaryString" />

    </PreferenceCategory>



</PreferenceScreen>
