<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/scaleNameLableString"
              android:id="@+id/textView4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scaleNameText"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scaleStatusText"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/measurementUnitPlaceholderString"
            android:id="@+id/measurementUnitText"
            android:textSize="40sp"
            android:layout_alignBottom="@+id/scaleWeightText"
            android:layout_toEndOf="@+id/scaleWeightText"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="00.0"
            android:id="@+id/scaleWeightText"
            android:textSize="80sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scaleStabilizationText"
            android:layout_below="@+id/measurementUnitText"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/unloadWeightText"
            android:layout_below="@+id/scaleStabilizationText"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scanStartButtonString"
        android:id="@+id/scanStartButton"
        android:layout_below="@+id/scaleStatusText"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="BMI"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:id="@+id/bmiLabelText"
        android:paddingTop="10dp"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="(BMI)"
        android:id="@+id/bmiValueText"
        android:visibility="gone"
        android:layout_below="@+id/bmiLabelText"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="(BMI Information)"
        android:id="@+id/bmiInformationText"
        android:layout_below="@+id/bmiValueText"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>
